--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -1,13 +1,19 @@
+{%  load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}">
+
+<div class="center" id="choice">
 <form action="{% url 'polls:vote' question.id %}" method="post">
+
 {% csrf_token %}
 <fieldset>
-    <legend><h1>{{ question.question_text }}</h1></legend>
+    <legend><h1 id="question">{{ question.question_text }}</h1></legend>
     {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
     {% for choice in question.choice_set.all %}
         <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
         <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br>
     {% endfor %}
 </fieldset>
-<input type="submit" value="Vote">
+<input type="submit" value="Vote" id="submit">
 </form>
+</div>
 <a href="{% url 'polls:index' %}"> Back Home </a>
