Added Music App

--- a/templates/mysite/index.html
+++ b/templates/mysite/index.html
@@ -13,6 +13,12 @@
             flex-direction: row;
             justify-content: space-evenly;
         }
+        h1 {
+            text-align: center;
+        }
+        footer {
+
+        }
     </style>
 </head>
     <body>
@@ -25,6 +31,9 @@
         </div>
         <div>
             <a href="{% url "polls:index"%}"><h2>Polls App</h2></a>
+        </div>
+        <div>
+            <a href="{% url "music:index"%}"><h2>Music App</h2></a>
         </div>
     </div>
 </body>
